# AgenticRag

./: .gitignore  AgenticRAG.ipynb  AgenticRAG.nbconvert.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
1-langgraph_basics/: simplegraph.ipynb
Agent_architecture/: 1-AgenticRAG.ipynb  1-ReAct.ipynb  2-ReactRag.ipynb  COTRAG.ipynb  eval.ipynb
